--- a/src/theme/App.css
+++ b/src/theme/App.css
@@ -1,4 +1,4 @@
 @font-face {
     font-family: 'Inter';
-    src: local('Inter'), url(fonts/Inter-Regular.ttf) format('truetype');
+    src: local('Inter'), url(../fonts/Inter-Regular.ttf) format('truetype');
   }
