text color change

--- a/src/theme/App.css
+++ b/src/theme/App.css
@@ -2,3 +2,7 @@
     font-family: 'Inter';
     src: local('Inter'), url(../fonts/Inter-Regular.ttf) format('truetype');
   }
+
+  h2 {
+    color: white;
+  }
